--- a/SmartContract/package.json
+++ b/SmartContract/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.1",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "ethers": "^6.5.1"
   }
 }
